--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js
             <div class="avatar-container-silver">
               <div class="avatar" style="
                     border: 2px solid rgb(160 160 160);
-                    background-image: url('/assets/img/Second\ Place\ Medal.png');
+                    background-image: url('./assets/img/Second\ Place\ Medal.png');
                   "></div>
             </div>
             <div class="user_name" id="user1_name">----</div>
@@ -117,7 +117,7 @@ https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js
             <div class="avatar-container-gold">
               <div class="avatar" style="
                     border: 2px solid rgb(250 210 72);
-                    background-image: url('/assets/img/Trophy.png');
+                    background-image: url('./assets/img/Trophy.png');
                   "></div>
             </div>
             <div class="user_name" id="user0_name">----</div>
@@ -151,7 +151,7 @@ https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js
             <div class="avatar-container-bronze">
               <div class="avatar" style="
                     border: 2px solid rgb(206 116 48);
-                    background-image: url('/assets/img/Third.png');
+                    background-image: url('./assets/img/Third.png');
                   "></div>
             </div>
             <div class="user_name" id="user2_name">----</div>
